@@ -33,6 +33,12 @@ set(CMAKE_CONFIGURATION_TYPES "${CMAKE_CONFIGURATION_TYPES}Release;" CACHE STRIN
 set(CMAKE_DEBUG_POSTFIX d)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
+# Installation
+set(PROJECT_INSTALL_DIR "${PROJECT_NAME}-${COMPILER}-x86_64-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
+if (PROJECT-MISC_CI_DEPLOY)
+	set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/${PROJECT_INSTALL_DIR}")
+endif ()
+
 # Build and platform specific configuration
 include_directories(AFTER "include" "external/include" "${PROJECT_BINARY_DIR}/generated_headers")
 
@@ -65,9 +71,6 @@ elseif (WIN32)
 	set(_CMAKE_C_FLAGS_DEBUG "/DDEBUG")
 	set(_CMAKE_CXX_FLAGS_DEBUG "/DDEBUG")
 endif ()
-
-# Project internal configuration
-set(PROJECT_INSTALL_DIR "${PROJECT_NAME}-${COMPILER}-x86_64-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 
 install(FILES README.md DESTINATION share RENAME yall_README.md)
 install(FILES changelog DESTINATION share RENAME yall_changelog)
